tests/positive/declare_multiple.fc
// test: declare-multiple-test
// exit-code: 0

void exit(int _);

int foo(int arg);

int foo(int arg);

void main(){
    exit(foo(2));
}

int foo(int arg);

int foo(int arg){
    return arg * 0;
}

int foo(int arg);