tests/negative/assign_wrong_func_type.fc
// test: assign-string-to-int-test
// compile-fail: true
// exit-code: 3

void exit(int _);

void main(){
    (int-int) f = exit;
    exit(0);
}